implement menu components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<div  [ngClass]="{'darkMode': isDarkTheme | async}">
 <app-menu-header></app-menu-header>
+<app-menu-bar></app-menu-bar>
+<app-product-list></app-product-list>
 <router-outlet></router-outlet>
+</div>
