--- a/src/theme/_dark.scss
+++ b/src/theme/_dark.scss
@@ -2,6 +2,8 @@ $dark-value-map:(
   name: "dark",
   text-color: white,
   primary: #4192b4,
+  color-opacity: 1,
+  selected-color-opacity: 0.8,
   component-background-color: #333333,
   button-text-color: #43bd43,
   background-color0:#0a123b,
