--- a/src/app/menu-components/menu-header/menu-header.component.html
+++ b/src/app/menu-components/menu-header/menu-header.component.html
@@ -4,7 +4,7 @@
       <div class="flex flex-row">
         <div class="flex p-1">
           <img class="iconImage"
-               [ngSrc]="brandImage" [height]="80" [width]="80">
+               src="{{brandImage}}" [height]="80" [width]="80">
         </div>
         <div class="flex flex-column p-1">
           <span class="text-900 font-bold mt-4 text">{{companyName}}</span>
