--- a/src/app/menu-components/menu-item/menu-item.component.html
+++ b/src/app/menu-components/menu-item/menu-item.component.html
@@ -1,1 +1,1 @@
-<span class="itemText app-text-primary">{{menuItemName}}</span>
+<span [ngClass]="{'app-text-primary':selected}" class="itemText">{{menuItemName}}</span>
