--- a/src/app/menu-components/product-card/product-card.component.html
+++ b/src/app/menu-components/product-card/product-card.component.html
@@ -1,6 +1,6 @@
-<div class="productCard color0 selected">
-  <span class="priceTag"><span class="font-bold app-text-primary">100</span> &nbsp;<span
+<div *ngIf="product" (click)="toggleSelected()" class="productCard {{'color'+index%10}} " [ngClass]="{'selected':selected}">
+  <span class="priceTag"><span class="font-bold app-text-primary">{{product.unitPrice}}</span> &nbsp;<span
     class="text font-light">Leke</span></span>
-  <span class="productName font-bold text flex-wrap">Kafe</span>
-<span class="firstChar app-text-primary">K</span>
+  <span class="productName font-bold text flex-wrap">{{product.name}}</span>
+  <span class="firstChar app-text-primary">{{product.name[0]}}</span>
 </div>
