--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,7 @@
                    [slogan]="businessData.nuis"></app-menu-header>
   <app-menu-bar [menuList]="businessData.categories"></app-menu-bar>
   <app-product-list></app-product-list>
-    <img class="w-12 m-0 p-0" width="100%" src="assets/footer.svg">
-</div>
+  <div class="footer">
+    <img  class="w-12 m-0 p-0 max-h-5rem" width="100%" src="assets/footer.svg">
+  </div>
+  </div>
