--- a/src/app/menu-components/product-list/product-list.component.html
+++ b/src/app/menu-components/product-list/product-list.component.html
@@ -4,9 +4,14 @@
   <app-product-card [product]="product" [index]="i" [selected]="selectedProducts.includes(product)"></app-product-card>
     </span>
   </div>
-  <span *ngIf="selectedProducts.length>0" class="bill text-color"><span>{{selectedProducts.length}}</span></span>
+  <span (click)="onModalVisible()" *ngIf="selectedProducts.length>0"
+        class="bill text-color"><span>{{selectedProducts.length}}</span></span>
 
-  <p-dialog [(visible)]="modalVisible" [position]="modalPosition" [style]="{width: '80vw'}">
-    <app-bill-card-modal></app-bill-card-modal>
-</p-dialog>
+  <p-dialog [(visible)]="billVisible" [position]="modalPosition" [style]="{width: '80vw'}">
+    <app-bill-card-modal (onSendBill)="onSendBill($event)"></app-bill-card-modal>
+  </p-dialog>
+  <p-dialog [(visible)]="confirmSentBill" [style]="{width: '60vw'}">
+    <app-bill-confirmation-card-modal (onClose)="onConfirmationDialogClose()"></app-bill-confirmation-card-modal>
+  </p-dialog>
+
 </div>
