--- a/src/theme/_dark.scss
+++ b/src/theme/_dark.scss
@@ -6,11 +6,11 @@ $dark-value-map:(
   selected-color-opacity: 0.8,
   component-background-color: #333333,
   button-text-color: #43bd43,
-  background-color0:#0a123b,
-  background-color1:#5b0e57,
-  background-color2:#1b3a0a,
-  background-color3:#560d2e,
-  background-color4:#42110d,
+  background-color0:#19232E,
+  background-color1:#65874D,
+  background-color2:#6B60EA,
+  background-color3:#9542BC,
+  background-color4:#96ADFF,
   background-color5:#3d360c,
   background-color6:#0c2f57,
   background-color7:#115611,
