--- a/src/theme/_light.scss
+++ b/src/theme/_light.scss
@@ -5,14 +5,14 @@ $light-value-map: (
   color-opacity: 0.8,
   selected-color-opacity: 1,
   component-background-color: white,
-  background-color0:#8b98d7,
-  background-color1:#f180eb,
-  background-color2:#92e561,
-  background-color3:#d96e9e,
-  background-color4:#de8179,
-  background-color5:#e0d698,
-  background-color6:#95beee,
-  background-color7:#68e768,
+  background-color0:#FFF6A0,
+  background-color1:#ABFF96,
+  background-color2:#FFACA0,
+  background-color3:#96ADFF,
+  background-color4:#6B60EA,
+  background-color5:#9542BC,
+  background-color6:#FFA0DF,
+  background-color7:#FFDB96,
   background-color8:#9fe7d6,
   background-color9:#d08d63,
 )
