--- a/src/app/menu-components/product-card/product-card.component.html
+++ b/src/app/menu-components/product-card/product-card.component.html
@@ -1,7 +1,10 @@
 <!--Add color0 - color9 class to the card by using the index and finding its mod10 so for ex index 16 will return color6 -->
-<div *ngIf="product" (click)="toggleSelected()" class="productCard {{'color'+index%10}} " [ngClass]="{'selected':selected}">
+<div *ngIf="product"
+     [style]="(isDarkTheme|async)?'background-color: hsla('+hue+','+saturation+'%,'+darkness+'%,'+(selected?'0.8)':'1.0)') :
+     'background-color: hsla('+hue+','+saturation+'%,'+lightness+'%,'+(selected?'1.0)':'0.8)')"
+     (click)="toggleSelected()" class="productCard " [ngClass]="{'selected':selected}">
   <span class="priceTag"><span class="font-bold app-text-primary">{{product.unitPrice}}</span> &nbsp;<span
-    class="text font-light">Leke</span></span>
-  <span class="productName font-bold text flex-wrap">{{product.name}}</span>
-  <span class="firstChar app-text-primary">{{product.name[0]}}</span>
+    class="text font-light" [style]="!(isDarkTheme|async)&&lightness>50?'color:black':'color:white'">Leke</span></span>
+  <span class="productName font-bold text flex-wrap" [style]="!(isDarkTheme|async)&&lightness>50?'color:black':'color:white'">{{product.name}}</span>
+  <span class="firstChar app-text-primary" [style]="!(isDarkTheme|async)&&lightness>50?'color:black':'color:white'">{{firstChar}}</span>
 </div>
